Front end MVP with dummy data

--- a/moteur/templates/moteur/index.html
+++ b/moteur/templates/moteur/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>Moteur EEIA</title>
     <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     {% render_bundle 'main' 'css' %}
   </head>
 
