--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -1,5 +1,35 @@
 @import "~bootstrap/scss/bootstrap";
 
 body {
-  color: #125d98;
+  // color: #125d98;
+  color: black;
+}
+
+// textarea:focus,
+// input[type="text"]:focus,
+// input[type="password"]:focus,
+// input[type="datetime"]:focus,
+// input[type="datetime-local"]:focus,
+// input[type="date"]:focus,
+// input[type="month"]:focus,
+// input[type="time"]:focus,
+// input[type="week"]:focus,
+// input[type="number"]:focus,
+// input[type="email"]:focus,
+// input[type="url"]:focus,
+// input[type="search"]:focus,
+// input[type="tel"]:focus,
+// input[type="color"]:focus,
+// .uneditable-input:focus {
+//   border: none;
+// }
+
+.article-card {
+  cursor: pointer;
+}
+
+.article-card:hover {
+  border: 1.52px solid rgba(0, 0, 0, 0.5);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(0, 0, 0, 0.6);
+  transform: translate(0, -5px);
 }
